@@ -1,3 +1,12 @@
+2008-06-13 Alasdair Allan <aa@astro.ex.ac.uk>
+
+	* bin/ogle_parsemail.pl: Added SMS alerts for ANOMALY events on OGLE 
+	  EWS mailings
+	
+	* bin/test_server_gsm.pl Added Twitter and email to status polling
+
+	* Infrastructure changes to support all of that.
+	
 2008-06-09 Alasdair Allan <aa@astro.ex.ac.uk>
 
         * www/robonet-1.0/single.cgi, performance.cgi, graphs.cgi, status.cgi
